# rubik-gl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: buffer.drawio
include/: app.h  buffer.h  buffer_layout.h  config.h.in  cube.h  mesh.h  renderer.h  shader.h  shader_object_pool.h  window.h
src/: app.cc  buffer.cc  buffer_layout.cc  cube.cc  main.cc  mesh.cc  renderer.cc  shader.cc  shader_object_pool.cc  window.cc
